--- a/perch-admin-theme.css
+++ b/perch-admin-theme.css
@@ -1,151 +1,1 @@
-html {
-    font-family: 'Open Sans', sans-serif;
-}
-body {
-    font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, clean, sans-serif;
-    padding-top:52px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-.form-simple label, .form-simple .fieldset-inner .legend-wrap, .repeater-heading {
-    font-weight: 500;
-}
-.js .divider div {
-    font-weight: 500; font-size: 1.15rem;
-}
-.repeater {
-    margin-left: 72px;
-    border-bottom: 1px solid #ccc;
-}
-a.primary:link, a.primary:visited, .primary {
-        font-weight: 500;
-}
-.title-panel .button,
-.button.to-the-top,
-.title-panel .button.button-icon {
-    background-color: #4285f4;
-    color: #fff;
-}
-.button.to-the-top.button-icon svg,
-.title-panel .button.button-icon svg {
-    fill: #fff;
-}
-
-h2.divider,
-.divider.ui-sortable-handle {
-    padding: 10px;
-    background-color: #4285f4;
-    color: #FFF;
-}
-.divider-toggle svg{
-    fill: #FFF;
-}
-
-header.topbar{
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-}
-table a.create-subitem {
-    color: #4285f4;
-}
-
-select {
-    padding:5px 40px 5px 10px;
-    width: 40%;
-    border-top: none;
-    border-right: none;
-    border-bottom: 1px solid #4285f4;
-    border-left: none;
-    background-color: #FFFFFF;
-    outline: none;
-    border-radius: 0;
-    -webkit-appearance: none;
-   -moz-appearance:    none;
-   appearance:         none;
-   background-image: url(select.png);
-   background-repeat:no-repeat;
-   background-position: right center;
-}
-input[type=text],
-textarea,
-.input-simple {
-    outline: none;
-    border-radius: 0;
-    box-shadow: none;
-}
-
-.block-add-bar a {
-    padding: 10px;
-    background-color: #4285f4;
-    color: #FFFFFF;
-    margin-right:4px;
-    margin-bottom:4px;
-    outline: none;
-}
-.block-add-bar a:hover {
-    padding: 10px !important;
-    background-color: #4285f4 !important;
-    color: #FFFFFF !important;
-    margin-right:4px;
-    margin-bottom:4px;
-    border-radius: 0 !important;
-    outline: none;
-
-}
-.block-wrap:hover .block-add-bar a,
-.block-add-bar:hover a {
-    color: #FFFFFF !important;
-}
-.blocks {
-    border-top: 1px dotted #4285f4;
-    border-bottom: 1px dotted #4285f4;
-}
-.blocks:before{
-    color:  #4285f4;
-}
-.submit-bar-actions .button.button-simple#btnSubmit,
-.submit-bar-actions .button.button-simple#btnsubmit {
-    border-bottom-color: #0f9d58;
-}
-
-.submit-bar-actions .button.button-simple#add_another {
-    border-bottom-color: #4285f4;
-}
-.submit-bar-actions .button.button-simple:hover,
-.block-add-bar .block-add-prompt svg{
-    width: 40px;
-    height: 40px;
-    fill:  #4285f4;
-}
-.button.button-small {
-    border-radius: 0;
-    padding: 6px;
-    font-size: inherit;
-}
-.repeated-item {
-    border:2px solid #4285f4;
-    margin-bottom: 30px
-}
-.repeated-item:hover .index,
-.repeated-item .index {
-    background-color: #4285f4;
-    color: #FFFFFF;
-}
-.repeated-item:hover
-.repeated-item .index:hover {
-        background-color: #4285f4;
-}
-.repeater .repeated:after {
-    border-color: #4285f4;
-    border-width: 2px;
-}
-#perch_postDateTime_day,
-#perch_postDateTime_month,
-#perch_postDateTime_year,
-#perch_postDateTime_hour,
-#perch_postDateTime_minute,
-#postStatus {
-    width: auto;
-}
+html { font-family: 'Open Sans', sans-serif; } body { font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, clean, sans-serif; padding-top:52px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; } .form-simple label, .form-simple .fieldset-inner .legend-wrap, .repeater-heading { font-weight: 500; } .js .divider div { font-weight: 500; font-size: 1.15rem; } .repeater { margin-left: 72px; border-bottom: 1px solid #ccc; } a.primary:link, a.primary:visited, .primary { font-weight: 500; } .title-panel .button, .button.to-the-top, .title-panel .button.button-icon { background-color: #4285f4; color: #fff; } .button.to-the-top.button-icon svg, .title-panel .button.button-icon svg { fill: #fff; } h2.divider, .divider.ui-sortable-handle { padding: 10px; background-color: #4285f4; color: #FFF; } .divider-toggle svg{ fill: #FFF; } header.topbar{ position: fixed; top:0; left:0; width: 100%; } table a.create-subitem { color: #4285f4; } select { padding:5px 40px 5px 10px; width: 40%; border-top: none; border-right: none; border-bottom: 1px solid #4285f4; border-left: none; background-color: #FFFFFF; outline: none; border-radius: 0; -webkit-appearance: none; -moz-appearance:    none; appearance:         none; background-image: url(select.png); background-repeat:no-repeat; background-position: right center; } input[type=text], textarea, .input-simple { outline: none; border-radius: 0; box-shadow: none; } .block-add-bar a { padding: 10px; background-color: #4285f4; color: #FFFFFF; margin-right:4px; margin-bottom:4px; outline: none; } .block-add-bar a:hover { padding: 10px !important; background-color: #4285f4 !important; color: #FFFFFF !important; margin-right:4px; margin-bottom:4px; border-radius: 0 !important; outline: none; } .block-wrap:hover .block-add-bar a, .block-add-bar:hover a { color: #FFFFFF !important; } .blocks { border-top: 1px dotted #4285f4; border-bottom: 1px dotted #4285f4; } .blocks:before{ color:  #4285f4; } .submit-bar-actions .button.button-simple#btnSubmit, .submit-bar-actions .button.button-simple#btnsubmit { border-bottom-color: #0f9d58; } .submit-bar-actions .button.button-simple#add_another { border-bottom-color: #4285f4; } .submit-bar-actions .button.button-simple:hover, .block-add-bar .block-add-prompt svg{ width: 40px; height: 40px; fill:  #4285f4; } .button.button-small { border-radius: 0; padding: 6px; font-size: inherit; } .repeated-item { border:2px solid #4285f4; margin-bottom: 30px } .repeated-item:hover .index, .repeated-item .index { background-color: #4285f4; color: #FFFFFF; } .repeated-item:hover .repeated-item .index:hover { background-color: #4285f4; } .repeater .repeated:after { border-color: #4285f4; border-width: 2px; } #perch_postDateTime_day, #perch_postDateTime_month, #perch_postDateTime_year, #perch_postDateTime_hour, #perch_postDateTime_minute, #postStatus { width: auto; }
