--- a/sass/main.scss
+++ b/sass/main.scss
@@ -182,7 +182,7 @@ textarea,
         color: $light-colour;
     }
 
-    h2.divder {
+    h2.divider {
         margin-left: 0;
         margin-right: 0;
         margin-top: 20px;
